# AGENT_Builder-File_Structure

./: README.md
backend/: main.py  pyproject.toml  worker.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: agent.py  auth.py
backend/app/core/: celery_app.py  config.py
backend/app/db/: session.py
backend/app/modules/agent/chains/: planner_chain.py  tool_selector_chain.py
backend/app/modules/auth/: models.py  schemas.py
backend/app/modules/compiler/: dag_builder.py  node_mapper.py
backend/app/modules/execution/: service.py
backend/app/modules/execution/state/: models.py  tracker.py
backend/app/modules/tools/base/: input_output.py  tool_base.py
backend/app/modules/tools/metadata/: catalog.py  llm_hints.py  schemas.py  ui_schema.py
backend/app/modules/tools/providers/github/: client.py  schema.py  tool.py
backend/app/modules/tools/providers/gmail/: client.py  schema.py  tool.py
backend/app/modules/tools/registry/: loader.py  validator.py
backend/app/modules/workflows/: models.py  schemas.py  service.py
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/app/: layout.tsx  providers.tsx
frontend/app/(auth)/login/: page.tsx
frontend/app/(dashboard)/: layout.tsx
frontend/app/(dashboard)/workflows/: page.tsx
frontend/features/agent-chat/components/: message-list.tsx  prompt-input.tsx
frontend/features/workflow-editor/hooks/: use-flow-sync.ts
frontend/lib/api/: interceptors.ts
frontend/lib/store/: store.ts
frontend/lib/store/slices/: authSlice.ts  uiSlice.ts  (+1 more)
frontend/lib/websocket/: client.ts
(+10 files in other folders)
